Amarok ChangeLog
================
(C) 2002-2010 the Amarok authors.


VERSION 2.4.0
  CHANGES:
    * New Splash Screen by Tomasz Dudzik <madsheytan@gmail.com>.
    * The "Playdar Collection" feature has been disabled until some technical 
      issues are resolved.
    * Fixed some broken radio stream URLs.

  BUGFIXES:
    * Fix fetching of script data. BBC, Free Music Charts and others should work again.
      (BR 261839)
    * Actually show the Splash Screen by default, as it was meant to work.
    * Leave all pending files in case of error/conflict during tracks moving. (BR 257739)
    * Fix crash when moving tracks between collections. (BR 253033)
    * Fixed issue with UMS Collection that made amarok to delete original track
      instead of newly copied one. (BR 238915)
    * Fixed issue with Audio CDs that do not provide CDDB information. Patch by
      Andriy Gapon <avg@icyb.net.ua>. (BR 257818)
    * Fixed issue with the Organize Files Dialog that prevented presets from being
      loaded when in advanced mode. Patch by Philipp Schmidt <philschmidt@gmx.net>.
      (BR 255325)


VERSION 2.4-Beta 1
  FEATURES:
    * New UPnP Collection detects and plays media on UPnP devices on the network.
    * New transcoding feature which converts one or more tracks with a chosen encoder
      when copying to the local collection.
    * Added option to use Wikipedia Mobile.
    * Added settings for writing statistics and album covers back to the file.
    * Leave focus in playlist search widget when using up/down to scroll through
      filtered results. Thanks to Thomas Karpiniec for the patch!
    * LyricsApplet: The lyrics in are now updated when they were changed in a
      different place, for example in the Tag Dialog.
    * Permit the use of iPod Touch 3G and possibly newer devices. Thanks to
      Aurélien Croc for the patch!
    * Match space-separated search terms in the playlist filter var individually. Thanks 
      to Thomas Karpiniec for the patch!